fix: fixed scrollbar behaviour

--- a/css/settings.css
+++ b/css/settings.css
@@ -739,7 +739,6 @@
     position: absolute;
     left: 0;
     right: 0;
-    transition: transform 0.1s linear;
 }
 
 .z-icon {
